[project]
name = "qwenvideo"
description = "A ComfyUI custom node for video analysis and prompt generation using Qwen3-VL-235B vision-language model via OpenRouter API."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["requests>=2.31.0", "Pillow>=10.0.0", "torch>=2.0.0", "numpy>=1.24.0"]

[project.urls]
Repository = "https://github.com/eddyhhlure1Eddy/ComfyUI-QwenVideo"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/eddyhhlure1Eddy/ComfyUI-QwenVideo/wiki"
"Bug Tracker" = "https://github.com/eddyhhlure1Eddy/ComfyUI-QwenVideo/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-QwenVideo"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

